ui: hide customer risk indicator panel

--- a/zendesk-app/assets/index.html
+++ b/zendesk-app/assets/index.html
@@ -34,8 +34,8 @@
 
       <!-- スクロール可能なLINE履歴エリア -->
       <div class="line-area">
-        <!-- 顧客リスク指標 -->
-        <div id="customer-risk" class="risk-panel">
+        <!-- 顧客リスク指標（非表示） -->
+        <div id="customer-risk" class="risk-panel" style="display: none;">
           <h3 class="section-title">⚠️ 顧客リスク指標</h3>
           <div class="risk-meter">
             <div id="risk-level" class="risk-level">通常</div>
