feat: single editable memo field, overwrite save, auto internal note

--- a/zendesk-app/assets/index.html
+++ b/zendesk-app/assets/index.html
@@ -75,10 +75,9 @@
           </div>
         </div>
 
-        <!-- 要注意メモ -->
+        <!-- 顧客メモ -->
         <div id="alert-memo" class="alert-memo">
-          <h3 class="section-title">⚡ 要注意メモ</h3>
-          <div id="existing-memos" class="existing-memos"></div>
+          <h3 class="section-title">⚡ 顧客メモ</h3>
           <textarea id="memo-input" class="memo-input" placeholder="この顧客に関する注意事項を入力..."></textarea>
           <button id="save-memo-btn" class="btn-secondary">
             <span class="btn-icon">💾</span>
